sass/px-app-nav-group.scss
/*
 * Copyright (c) 2018, General Electric
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Settings
@import "px-defaults-design/_settings.defaults.scss";
// Normalize (excerpt)
:host {
  color: $inuit-base-text-color;
  line-height: $inuit-base-line-height / $inuit-base-font-size; /* [1] */
  text-size-adjust: 100%; /* [4] */
  -moz-osx-font-smoothing: grayscale; /* [5] */
  -webkit-font-smoothing: antialiased; /* [5] */
}

// Generic
@import "px-box-sizing-design/_generic.box-sizing.scss";

// Component
$px-app-nav-group-height: var(--px-app-nav-height, calculateRem(60px));
:host {
  position: relative;
  display: flex;
  height: auto;
  overflow: hidden;
}
px-app-nav-item {
  flex: 1 1 auto;
}

$px-app-nav-group-background-color: var(--px-app-nav-subitem-background-color, white); // Same background color as subitem
.app-nav-group__dropdown {
  display: block;
  height: calc(100vh - #{$px-app-nav-group-height});
  z-index: 399;
  overflow: visible;
}

.app-nav-group__dropdown__content {
  background-color: $px-app-nav-group-background-color;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.30);
  max-width: inherit;
  margin: 1px;
  position: relative;
  top: -1px;
}

